deployments/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: qlkube
  labels:
    app: qlkube
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8080
  selector:
    app: qlkube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qlkube
  labels:
    app: qlkube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qlkube
      app.kubernetes.io/name: qlkube
      app.kubernetes.io/instance: qlkube
      app.kubernetes.io/component: qlkube
  template:
    metadata:
      labels:
        app: qlkube
        app.kubernetes.io/name: qlkube
        app.kubernetes.io/instance: qlkube
        app.kubernetes.io/component: qlkube
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      serviceAccountName: qlkube
      containers:
        - name: qlkube
          image: hrexed/qlkube:1.6.1-otel
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
